fix (hero-image): position on small devices

--- a/index.css
+++ b/index.css
@@ -195,6 +195,10 @@ body {
         padding-inline: 0.7rem;
     }
 
+    .hero-section__image-wrapper{
+        top:0px;
+    }
+
     .hero-section__image {
         width: 100%;
     }
